--- a/PetMate/PetMate/Info.plist
+++ b/PetMate/PetMate/Info.plist
@@ -2,8 +2,6 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>UIUserInterfaceStyle</key>
-	<string>Light</string>
 	<key>CFBundleURLTypes</key>
 	<array>
 		<dict>
@@ -25,6 +23,8 @@
 	<array>
 		<string>google</string>
 	</array>
+	<key>NSCalendarsFullAccessUsageDescription</key>
+	<string>this app need show event which add user added</string>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
